syntax = "proto3";
package mycel.registry.v1;

import "cosmos/base/v1beta1/coin.proto";
import "mycel/registry/v1/access_control.proto";

option go_package = "github.com/mycel-domain/mycel/x/registry/types";

enum RegistrationPolicyType {
  PRIVATE = 0;
  PUBLIC = 1;
}

message SubdomainRegistrationFees {
  repeated FeeByLength fee_by_length = 1;
  repeated FeeByName fee_by_name = 2;
  cosmos.base.v1beta1.Coin default_fee = 3;
}

message FeeByLength {
  uint32 length = 1;
  bool is_registrable = 2;
  cosmos.base.v1beta1.Coin fee = 3;
}

message FeeByName {
  string name = 1;
  bool is_registrable = 2;
  cosmos.base.v1beta1.Coin fee = 3;
}

message SubdomainConfig {
  uint64 max_subdomain_registrations = 1;
  SubdomainRegistrationFees subdomain_registration_fees = 2;
  bool is_registrable = 3;
  DomainRole registrable_role = 4;
  bool custom_expiration_date = 5;
  RegistrationPolicyType registration_policy = 6;
}
